# pyminifier

./: Makefile  pyproject.toml
pyminifier/: __main__.py  obfuscate.py
