[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyminifier-py3"
version = "1.0.0"
description = "Python code minifier, obfuscator, and compressor" 
authors = [{name = "Hyeokjune Jeon", email = "fantajeon@gmail.com"}]
license = {text="Proprietary"}
readme = "pyminifier/docs/build/html"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
]
keywords = ["minifier", "pyminifier"]

[project.urls]
homepage = "https://github.com/fantajeon/pyminifier" 

[project.scripts]
# 스크립트 및 엔트리 포인트를 설정합니다.
pyminifier="pyminifier.__main__:main"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = [
    ".",
]
include=["pyminifier"]